<resources>
    <string name="app_name">EasyCommandNFC</string>
    <string name="btnValidate">Login</string>
    <string name="pwd_txt">Password</string>
    <string name="username_txt">Username</string>

    <!-- tagreader-->
    <string name="hello_world">Hello world!</string>
    <string name="nfc_reading">Reading NFC&#8230;</string>
    <string name="share">SHARE</string>
    <string name="clear">CLEAR</string>
    <string name="label_demo_nfc">Lecture et écriture de TAG NFC</string>
    <string name="message">Veuillez écrire un message....</string>
    <string name="UID">UID : </string>
    <string name="NDEF">NDEF : </string>
    <string name="notification">Creer une notification</string>
    <string name="apropos">A propos</string>
    <string name="quitter">Quitter</string>
    <string name="retour">Retour</string>
    <string name="mbds">MBDS</string>
    <string name="read">Read</string>
    <string name="title_activity_menu_activty">MenuActivty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- for nfceditor-->
    <!-- TODO: Remove or change this placeholder text -->


    <string name="readButton">Read</string>
    <string name="writeButton">Write</string>
    <string name="eraseButton">Erase</string>

    <string name="textButton">Text</string>
    <string name="appliButton">Application</string>
    <string name="urlButton">URL</string>

    <string name="title_activity_read">Read the TAG</string>
    <string name="title_activity_choice_write">Write on the TAG</string>
    <string name="title_activity_write_text">Write text</string>
    <string name="title_activity_write_app">Choose application</string>
    <string name="title_activity_write_url">Write URL</string>
    <string name="title_activity_erase">Erase the TAG</string>

    <string name="uri">http://www.</string>

    <string name="scan_your_tag">Scan your tag</string>

    <string name="about_title">About</string>
    <string name="about_desc">
        Travail réalisé par : \n
            \t\t - Mamadou Thiaw
    </string>
    <string name="about_action">About</string>
    <string name="about_close">Close</string>

    <string name="info_title">Information</string>
    <string name="info_desc">
    </string>
    <string name="info_cancel">Cancel</string>
    <string name="info_ok">OK</string>
    <string name="appbar_scrolling_view_behavior">for writing to tag</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
