<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cnt.nfc.mbds.fr.easycommandnfc.NFCtestfinal.Main2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutRAndW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                tools:ignore="ObsoleteLayoutParam">
                <Button
                    android:id="@+id/readButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/read_ic"
                    android:text="@string/readButton"
                    tools:ignore="ButtonStyle" />


                <Button
                    android:id="@+id/writeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/readButton"
                    android:drawableTop="@drawable/write_ic"
                    android:text="@string/writeButton"
                    tools:ignore="ButtonStyle,ObsoleteLayoutParam" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutRAndW"
                tools:ignore="ObsoleteLayoutParam">
                <Button
                    android:id="@+id/eraseButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/erase_ic"
                    android:text="@string/eraseButton" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>